@@ -24,14 +24,14 @@ dist_pixmap_DATA = regexxer.png
 stockimages = stock_menu_about.png stock_save_all_16.png stock_save_all_24.png
 dist_noinst_DATA = $(stockimages)
 
-pixbuf_build_list = \
-stock_menu_about $(srcdir)/stock_menu_about.png \
-stock_save_all_16 $(srcdir)/stock_save_all_16.png \
-stock_save_all_24 $(srcdir)/stock_save_all_24.png
-
 BUILT_SOURCES = stockimages.h
 CLEANFILES    = stockimages.h
 
 stockimages.h: $(stockimages)
-	$(GDK_PIXBUF_CSOURCE) --extern --raw --build-list $(pixbuf_build_list) > $@
+	build_list=''; \
+	list='$(stockimages)'; for file in $$list ; do \
+	  name=`echo $$file | sed 's|\..*$$||'`; \
+	  build_list="$$build_list $$name $(srcdir)/$$file"; \
+	done; \
+	$(GDK_PIXBUF_CSOURCE) --extern --raw --build-list $$build_list > $@
 
